[gd_scene load_steps=2 format=3 uid="uid://btrk312m8bb5o"]

[ext_resource type="Script" path="res://Scripts/settings_manu.gd" id="1_abo6e"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_abo6e")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -113.0
offset_right = 300.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Volume"

[node name="Volume" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Mute"

[node name="Res" type="OptionButton" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
selected = 3
item_count = 4
popup/item_0/text = "2560x1440"
popup/item_1/text = "1920x1080"
popup/item_1/id = 1
popup/item_2/text = "1600x900"
popup/item_2/id = 2
popup/item_3/text = "1280x720"
popup/item_3/id = 3

[node name="Vsync" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Vsync"

[node name="FullScreen" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FullScreen"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 42
text = "Back"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/Res" to="." method="_on_res_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/Vsync" to="." method="_on_check_box_2_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
